assets/_scss/_homepage.scss
/* ==========================================================================
   Jumbotron
   ========================================================================== */

.jumbotron {
  background-color: transparent;
  overflow: hidden;
  padding: 0;
}

#conferenceInfo {
  background-color: $accent;

  h1 {
    background-color: fade-out($primary-light, .35);
    color: $white;
    font-family: $font-family-serif;
    font-size: 2em;
    font-weight: normal;
    letter-spacing: .02em;
    margin-bottom: 0;
    margin-top: -1.2em;
    padding: .2em;
    text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.8);

    small {
      font-size: 65%;
      color: inherit;
      display: block;
    }
  }
}

#conferenceActions {
  margin-bottom: 1em;
  text-align: center;

  .btn {
    background-color: transparent;
    border: 2px solid $jumbotron-btn-color;
    border-radius: 0;
    color: $jumbotron-btn-color;
    margin: .5em .5em 0 0;

    &:hover,&:focus {
      background-color: $jumbotron-btn-color;
      color: $gray-base;
    }
  }
}

/* ==========================================================================
   Hero Image
   ========================================================================== */

#heroImageAttribution {
  background-color: $primary;
  color: $cultured-white;
  font-size: .9em;

  a {
    color: $cultured-white;
  }
}

.hero-image {
  height: 325px;
}

.hero-image img {
  height: 100%;
  width: auto;
  object-fit: cover;
  object-position: top right;
}

/*
 The following breakpoint is based on the dimensions of the selected hero image
 It should be equal to 325 * (image's natural width) / (image's natural height)
 2019 note: This math did not work out for a 2876x913 image, where min-width in line 152 should have, according to above math, been 1020. Instead 1160 is the number that works with this year's hero image.
 */

@media (min-width: 890px) {
  .hero-image img {
    width: 100%;
  }
}

@media (min-width: $screen-sm-min) {
  .hero-image {
    position: relative;
    height: 370px;
  }

  .hero-image img {
    position: absolute;
    z-index: -9999;
  }

  #conferenceInfo h1 {
    font-size: 3em;
    margin-left: auto;
    margin-right: auto;
    max-width: 1170px;
  }

  #conferenceActions {
    margin: 0 auto;
    max-width: 1050px;
    text-align: left;

    .btn {
      float: left;
      margin-right: 1em;
    }
  }
}

@media (min-width: $screen-md-min) {

  #conferenceInfo h1 {
    font-size: 4.5em;
  }

  #conferenceActions {
    margin-top: -4.2em;
    padding-bottom: 4.2em;
  }
}

@media (min-width: 1600px) {
  .hero-image {
    height: 550px;
  }
}

// "Welcome to..." section of the home page
.welcome a {
  @include link-styles;
  color: $accent !important;

  &:hover,
  &:focus,
  &:active {
    @include link-styles-states;
    color: $primary !important;
  }
}

